Add offline pay pending reconciliation
